# TotalW_5

./: README.md  main.py  pyproject.toml
scr/: config.py  data_psg.py  data_psg_previosly.py  database.ini  item.py  vacancies.json
