[tool.poetry]
name = "totalw5"
version = "0.1.0"
description = ""
authors = ["Olga Yarosh <O_ll_y_a@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
